Inconsistent display of active filters for file import/export file dialogs. #90159

Closed
opened 2021-07-26 10:49:28 +02:00 by Leon Zandman · 4 comments

System Information
Operating system: macOS-11.5-x86_64-i386-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 71.7.1

Blender Version
Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: 1b8d33b18c
Worked: -

During a review of the upcoming USD Import feature (D10700) I noticed some conflicting behaviour in Blender's file import and export dialogs. As this behaviour isn't specific to the USD branch's code, it seems better to track this issue in this separate task.

Short description of error
Blender's file dialogs support setting filters for certain files, based on filename extensions. The dialogs used for Blender's file import and export features all use this and are instanced using a filter that corresponds to the file type(s) that the particular import or export feature supports. So when you do File -> Import -> Alembic (.abc) you get, as the menu item implies, a file dialog that only shows folders and files that have the .abc filename extension.

However, the active filter isn't always clear to the end user. Some dialogs clearly show the active filter, while others don't. The filter sections for both the Collada and Alembic import dialogs look like this, even though they filter for different filename extensions:
USD_Filter.png

As you can see, nowhere the currently active filename extension filters (.dae for Collada or .abc for Alembic) are shown.

And here are the filter sections for the FBX and glTF 2.0 import dialogs:
FBX_Filter.png

glTF_Filter.png

I'd say the latter two are more clear to the end user. I personally think a file dialog should always indicate the currently active filters and clearly specify them.

It seems the import/export dialogs that do display the currently active filter are all originating from Python add-on code, while the "wrong" ones are from built-in, native C++ features.

Step to Reproduce

  • Open Default scene
  • File -> Import/Export -> Collada -> Filter Settings (current active extension is not displayed in dropdown)
  • File -> Import/Export -> FBX -> Filter Settings (current active extension is displayed in dropdown)
**System Information** Operating system: macOS-11.5-x86_64-i386-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 71.7.1 **Blender Version** Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: `1b8d33b18c` Worked: - During a review of the upcoming USD Import feature ([D10700](https://archive.blender.org/developer/D10700)) I noticed some conflicting behaviour in Blender's file import and export dialogs. As this behaviour isn't specific to the USD branch's code, it seems better to track this issue in this separate task. **Short description of error** Blender's file dialogs support setting filters for certain files, based on filename extensions. The dialogs used for Blender's file import and export features all use this and are instanced using a filter that corresponds to the file type(s) that the particular import or export feature supports. So when you do `File -> Import -> Alembic (.abc)` you get, as the menu item implies, a file dialog that only shows folders and files that have the `.abc` filename extension. However, the active filter isn't always clear to the end user. Some dialogs clearly show the active filter, while others don't. The filter sections for both the Collada and Alembic import dialogs look like this, even though they filter for different filename extensions: ![USD_Filter.png](https://archive.blender.org/developer/F10228600/USD_Filter.png) As you can see, nowhere the currently active filename extension filters (`.dae` for Collada or `.abc` for Alembic) are shown. And here are the filter sections for the FBX and glTF 2.0 import dialogs: ![FBX_Filter.png](https://archive.blender.org/developer/F10228587/FBX_Filter.png) ![glTF_Filter.png](https://archive.blender.org/developer/F10228590/glTF_Filter.png) I'd say the latter two are more clear to the end user. I personally think a file dialog should always indicate the currently active filters and clearly specify them. It seems the import/export dialogs that do display the currently active filter are all originating from Python add-on code, while the "wrong" ones are from built-in, native C++ features. **Step to Reproduce** - Open Default scene - File -> Import/Export -> Collada -> Filter Settings (current active extension is not displayed in dropdown) - File -> Import/Export -> FBX -> Filter Settings (current active extension is displayed in dropdown)

Added subscriber: @Zandman

Added subscriber: @Zandman

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade self-assigned this 2022-12-10 13:21:19 +01:00

Added subscriber: @scurest

Added subscriber: @scurest
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-18 15:58:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90159
There is no content yet.