Fix #90159: Inconsistent display of active filters for import/export file dialogs

Use `filter_glob` property to list only operator extension files.
PR includes filtering for collada, usd, alembic file formats.

Old Revision: https://archive.blender.org/developer/D16739