source/blender/editors/io/io_alembic.c
@@ -280,6 +280,8 @@ void WM_OT_alembic_export(wmOperatorType *ot)
                                  FILE_DEFAULTDISPLAY,
                                  FILE_SORT_DEFAULT);
 
+  RNA_def_string(ot->srna, "filter_glob", "*.abc", 0, "", "");
+
   RNA_def_int(ot->srna,
               "start",
               INT_MIN,
@@ -672,6 +674,8 @@ void WM_OT_alembic_import(wmOperatorType *ot)
                                  WM_FILESEL_FILEPATH | WM_FILESEL_RELPATH | WM_FILESEL_SHOW_PROPS,
                                  FILE_DEFAULTDISPLAY,
                                  FILE_SORT_DEFAULT);
+
+  RNA_def_string(ot->srna, "filter_glob", "*.abc", 0, "", "");
 
   RNA_def_float(
       ot->srna,
